================= version 2.0.4 ( yet to be released) ============
* Udated about box UI
* Updated UI, explains joystick support isn't complete yet in the GUI
* Cleaned up glade file to silence warnings
* Pygame is no longer required for gfceux to run, just for the input GUI
* Turbo A and Turbo B support for gamepad GUI
* Added initial support for a graphical UI for configuring gamepads
* Moved gfceu options data file into .fceux instead of .fceultra
================= version 2.0.3 =================================
* Updated UI slightly.  Moved sound and advanced tabs; made autoscaling
  configuration a bit more intuitive; rearranged some items; made some
  text more clear
* Changed gfceu code references to gfceux
* Fixed error in which gfceux would display an ugly error message if
 the fceux binary could not be found.
* Working on new config system for input.  you can try by configuring
 the third gamepad.  It's not functional yet, but it's a start on more
 intuitive gamepad configuration for sdl
================== version 2.0.2 ================================
* Now stores config file in .fceultra
* If the .fceultra config directory doesn't exist yet, gfceux will
     now create it.
================== version 2.0.0 ================================
* Supports movie playback
* Support lua script loading
* Supports autoscale
* No longer requires GnomeVFS
* Major code cleanup
* Supports fceux command line options (different syntax from fceu)
* Now requires pygtk >= 2.12
* Transitioned from gtk.glade to gtk.Builder.
* Changed some strings to reflect new email and website
* Fixed and cleaned some stuff with the glade loading
========================== version 0.6.0 ========================
* Fixed evil no ROM problem.
* Added ALSA support (sort of)
* Fixed join/host problem.
========================== version 0.5.2 ========================
Cleanup:
* Fixed silly hack when forcing GTK event processing.
* Accepted patch from Scott Brown on improved options file system